Todo 모듈 예외 세분화, 테스트 코드 추가